# cynth-v2

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: bitwisetools.hpp  config.hpp  constexprtools.hpp  containertools.hpp  cynth.hpp  exceptions.hpp  functional.hpp  mathtools.hpp  platform.hpp  string_tools.hpp  wavetables.hpp
inc/api/: api.hpp
inc/api/asio/: buffertools.hpp  driver.hpp  tools.hpp  wrapper.hpp
inc/api/wasapi/: audio_client.hpp  device.hpp  device_collection.hpp  device_enumerator.hpp  interface_wrapper.hpp  property_store.hpp  render_client.hpp  wrapper.hpp
inc/devices/: filter.hpp  oscillator.hpp
src/: entry.cpp
